--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://caihanlin.com
 # Owner/author information
 owner:
   name: Chi Xu
-  avatar: chi.jpg
+  avatar: hanlin.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: hanlin.cai@ieee.org
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
