--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://dawnian.github.io
 # Owner/author information
 owner:
   name: Chi Xu
-  avatar: hanlin.jpg
+  avatar: chi.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: hanlin.cai@ieee.org
   cv: https://mysxcMarch.com/file/CV-HanlinCAI.pdf
